tests/core/error/expression-multiplicative-3.rq
SELECT ('a' * 2 AS ?op) { }
